--- a/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
@@ -250,7 +250,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="playButtonPressed" destination="5YQ-yq-kIg" eventType="touchUpInside" id="39b-nn-Kao"/>
+                                    <action selector="playButtonPressed" destination="5YQ-yq-kIg" eventType="touchUpInside" id="Npd-F6-Uoj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="bOQ-tT-kDU">
@@ -269,7 +269,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="drawButtonPressed" destination="5YQ-yq-kIg" eventType="touchUpInside" id="wjw-hn-e7W"/>
+                                    <action selector="drawButtonPressed" destination="5YQ-yq-kIg" eventType="touchUpInside" id="PZJ-7s-MS0"/>
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="155" sectionHeaderHeight="22" sectionFooterHeight="22" id="gay-Bn-PyB" customClass="HorizontalTableView">
@@ -505,12 +505,14 @@ A preferences page is also available from the home screen. To get to this page, 
         <class className="PlayViewController" superclassName="ViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayViewController.h"/>
             <relationships>
-                <relationship kind="action" name="drawButtonPressed"/>
-                <relationship kind="action" name="playButtonPressed"/>
                 <relationship kind="outlet" name="cardHand" candidateClass="HorizontalTableView"/>
                 <relationship kind="outlet" name="drawButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="playButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="playerController" candidateClass="PlayerController"/>
             </relationships>
+        </class>
+        <class className="PlayerController" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayerController.h"/>
         </class>
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
