--- a/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
@@ -260,6 +260,54 @@
                                     <outlet property="delegate" destination="5YQ-yq-kIg" id="7zK-oz-qFT"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" id="O6Q-ID-1ca">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="321"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" id="IGR-yd-dUZ">
+                                        <rect key="frame" x="63" y="20" width="355" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <subviews>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Enter IP Address of Server" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="zR8-ag-3gv">
+                                                <rect key="frame" x="20" y="20" width="315" height="21"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="***.***.***.***" textAlignment="center" minimumFontSize="17" id="nYZ-Ig-gFw">
+                                                <rect key="frame" x="80" y="49" width="194" height="31"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="numbersAndPunctuation" returnKeyType="done"/>
+                                                <connections>
+                                                    <outlet property="delegate" destination="5YQ-yq-kIg" id="I3X-JY-yS9"/>
+                                                </connections>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.78039222959999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
+                                    </view>
+                                    <view hidden="YES" contentMode="scaleToFill" id="6hh-sm-L9v">
+                                        <rect key="frame" x="63" y="98" width="355" height="83"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <subviews>
+                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" animating="YES" style="whiteLarge" id="GUV-av-QIH">
+                                                <rect key="frame" x="23" y="23" width="37" height="37"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </activityIndicatorView>
+                                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connecting..." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="eQJ-7S-dua">
+                                                <rect key="frame" x="82" y="18" width="249" height="48"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="1" green="0.78039222959999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -269,6 +317,12 @@
                     <connections>
                         <outlet property="buttonLayout" destination="y4x-mT-jqK" id="Z6O-GD-s6T"/>
                         <outlet property="cardHand" destination="gay-Bn-PyB" id="dBr-5H-Ces"/>
+                        <outlet property="loadingPopup" destination="6hh-sm-L9v" id="kFz-z3-6aH"/>
+                        <outlet property="loadingPopupTitle" destination="eQJ-7S-dua" id="XEX-e7-Zu4"/>
+                        <outlet property="overlay" destination="O6Q-ID-1ca" id="OE1-Zy-wyb"/>
+                        <outlet property="textPopup" destination="IGR-yd-dUZ" id="UO8-cC-7SW"/>
+                        <outlet property="textPopupTextField" destination="nYZ-Ig-gFw" id="o29-qG-Age"/>
+                        <outlet property="textPopupTitle" destination="zR8-ag-3gv" id="6ek-2m-94K"/>
                         <segue destination="k5I-1V-T9v" kind="push" identifier="winner" id="15z-C5-MOh"/>
                         <segue destination="PIN-XC-1M0" kind="push" identifier="loser" id="pIk-C5-dlR"/>
                         <segue destination="Dsh-Ae-EZB" kind="modal" identifier="choosesuit" id="DVa-3A-q7h"/>
@@ -473,6 +527,12 @@ A preferences page is also available from the home screen. To get to this page, 
             <relationships>
                 <relationship kind="outlet" name="buttonLayout" candidateClass="UIView"/>
                 <relationship kind="outlet" name="cardHand" candidateClass="HorizontalTableView"/>
+                <relationship kind="outlet" name="loadingPopup" candidateClass="UIView"/>
+                <relationship kind="outlet" name="loadingPopupTitle" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="overlay" candidateClass="UIView"/>
+                <relationship kind="outlet" name="textPopup" candidateClass="UIView"/>
+                <relationship kind="outlet" name="textPopupTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="textPopupTitle" candidateClass="UILabel"/>
             </relationships>
         </class>
         <class className="ViewController" superclassName="UIViewController">
