--- a/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPhone.storyboard
@@ -50,7 +50,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="5YQ-yq-kIg" kind="push" id="h7o-ZY-DOi"/>
+                                    <segue destination="PEr-Mu-qhH" kind="push" id="QIY-fr-Rdi"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="2ki-jj-kyT">
@@ -100,7 +100,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHY-Wz-k1C" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="F5Q-YB-nBF" customClass="ViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DcQ-3z-aZx">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="460" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" id="kgP-to-WDw">
@@ -131,7 +131,7 @@
                     </view>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1497" y="-1204"/>
+            <point key="canvasLocation" x="2063" y="-1114"/>
         </scene>
         <!--Choose Suit View Controller-->
         <scene sceneID="gHR-ZM-WJk">
@@ -139,11 +139,11 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ttr-6H-6T4" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="Dsh-Ae-EZB" customClass="ChooseSuitViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6qR-LF-PLI">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="460" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" id="zKf-gw-Sp4">
-                                <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
+                                <rect key="frame" x="0.0" y="0.0" width="460" height="320"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" id="Xxq-of-keN">
@@ -219,7 +219,7 @@
                     </view>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1497" y="-779"/>
+            <point key="canvasLocation" x="2063" y="-689"/>
         </scene>
         <!--Play View Controller - Play-->
         <scene sceneID="Wss-xF-8cb">
@@ -330,7 +330,7 @@
                     </connections>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="796" y="-88"/>
+            <point key="canvasLocation" x="1363" y="-92"/>
         </scene>
         <!--Game Result View Controller - You Win!-->
         <scene sceneID="bfp-y4-ARU">
@@ -369,7 +369,67 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1497" y="-373"/>
+            <point key="canvasLocation" x="2063" y="-283"/>
+        </scene>
+        <!--Player Connect View Controller-->
+        <scene sceneID="tlx-vQ-2aC">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Iz-MX-rGt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="PEr-Mu-qhH" customClass="PlayerConnectViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wvY-yA-cs4">
+                        <rect key="frame" x="0.0" y="44" width="480" height="276"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" id="Bwo-bd-ij0">
+                                <rect key="frame" x="0.0" y="0.0" width="480" height="290"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="QOj-88-ui7">
+                                <rect key="frame" x="20" y="20" width="440" height="236"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="0.78039222959999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="services" textLabel="Sju-Qj-XfD" style="IBUITableViewCellStyleDefault" id="9L6-Mm-jxC">
+                                        <rect key="frame" x="0.0" y="22" width="440" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="440" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Sju-Qj-XfD">
+                                                    <rect key="frame" x="10" y="0.0" width="420" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="PEr-Mu-qhH" id="USY-JP-cJR"/>
+                                    <outlet property="delegate" destination="PEr-Mu-qhH" id="WLw-zp-qM5"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" id="gH1-hU-Jlc">
+                                <rect key="frame" x="451" y="7" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="M8I-fp-cMR"/>
+                    <connections>
+                        <outlet property="searching" destination="gH1-hU-Jlc" id="jFr-w6-uEC"/>
+                        <outlet property="servers" destination="QOj-88-ui7" id="GTS-9x-w8O"/>
+                        <segue destination="5YQ-yq-kIg" kind="push" identifier="playerhand" id="pNd-fX-tjn"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="796" y="-92"/>
         </scene>
         <!--View Controller - Rules-->
         <scene sceneID="Zlx-XT-R6h">
@@ -490,7 +550,7 @@ A preferences page is also available from the home screen. To get to this page, 
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="1497" y="56"/>
+            <point key="canvasLocation" x="2063" y="146"/>
         </scene>
     </scenes>
     <resources>
@@ -533,6 +593,13 @@ A preferences page is also available from the home screen. To get to this page, 
                 <relationship kind="outlet" name="textPopup" candidateClass="UIView"/>
                 <relationship kind="outlet" name="textPopupTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="textPopupTitle" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="PlayerConnectViewController" superclassName="ViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayerConnectViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="searching" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="servers" candidateClass="UITableView"/>
             </relationships>
         </class>
         <class className="ViewController" superclassName="UIViewController">
